# linux-riscv-dev

./: .gitmodules
exercises/users/dpdk-ipv6/tcp/socket/socket6/: CMakeLists.txt  Makefile  client.c  server.c
exercises/users/nginx-sharemem/: .gitignore  CMakeLists.txt  README.md
exercises/users/nginx-sharemem/src/: config-tiny.h  config.h  ngx_atomic.h  ngx_config.h  ngx_posix_config.h  ngx_queue.c  ngx_queue.h  ngx_shmem.c  ngx_shmem.h  ngx_shmtx.h  ngx_slab.h
exercises/users/nginx-sharemem/src-tiny/: config.h  ngx_rbtree.c  ngx_rbtree.h  ngx_rwlock.c  ngx_rwlock.h  ngx_shmtx.c  ngx_shmtx.h  ngx_slab.c
exercises/users/nginx-sharemem/test/: test.c  tree.c
exercises2/soft-roce/gpu_ibv_utils/: CMakeLists.txt  README.md  config.h  minmax.h  rc_pingpong.c  ud_pingpong.c
exercises2/soft-roce/rdma-ping/rdma-bad/: CMakeLists.txt  Makefile  README.md  config.cmake  rc_pingpong.c  ud_pingpong.c
exercises2/soft-roce/rdma-ping/rdma-bad/common/: bitset.h  common.h  net.c  net.h  persistence.c  persistence.h  utils.c  utils.h
exercises2/soft-roce/rdma-ping/rdma-bad/src/: args.c  args.h  ib_net.c  ib_net.h  pingpong.c  pingpong.h
exercises2/user_space/5g-traffic-generator/: CMakeLists.txt  README.md
exercises2/user_space/5g-traffic-generator/gtp5g/: README.md  gtpgw2.sh
exercises2/user_space/5g-traffic-generator/gtp5g/script/: cleanup-gtp.sh  config_5g.sh  create_topo.sh  create_tun.sh  del_topo.sh  setup-gtp.sh
exercises2/user_space/5g-traffic-generator/libgtp5gnl/: README.md
exercises2/user_space/5g-traffic-generator/libgtpnl/: README.md
linux-5.14/: .config
nccl/gpu/shm/memory/: CMakeLists.txt  KernelForTest.cuh  Makefile  MemParallel.cu  MemParallel2.cu  MemParallel3.cu  cudaMalloc_api.cpp  error_handling.h  mat_mul.cu  mem_info_api.cpp  vm_tensor.cu  vmm_api.cpp
nccl/llama.cpp/kv-compact/: .gitignore  CMakeLists.txt  README.md  build.bat
nccl/llama.cpp/kv-compact/docs/: adjacent-concepts.md  algorithms.md  attention-matching-paper.md  rationale.md  user-stories.md
nccl/llama.cpp/kv-compact/include/: kv-compact-math.h  kv-compact-state.h
nccl/llama.cpp/kv-compact/src/: kv-compact.cpp
nccl/llama.cpp/kv-compact/tests/: test-kv-compact-e2e.cpp  test-kv-compact-math.cpp
nccl/llama.cpp/learn_llama_cpp/Paged-KV-cache/ollama-kv-cache-tiering-ggml-paged/: CMakeLists.txt  README.md  ggml_paged_bridge.cu  ggml_paged_bridge.h  kv_pager.c  kv_pager.h  paged_attn.cu  paged_attn.h  test_paged_attn.cu
nccl/llama.cpp/learn_llama_cpp/proj1/: .gitignore  CMakeLists.txt
nccl/llama.cpp/learn_llama_cpp/proj1/docs/: 1_why_llama_cpp.md  3_read_simple_cpp.md
nccl/llama.cpp/learn_llama_cpp/proj1/src/2/: main.cpp
nccl/llama.cpp/learn_llama_cpp/proj1/src/3/: main.cpp
nccl/llama.cpp/learn_llama_cpp/proj1/src/7/: main.cpp
nccl/llama.cpp/learn_llama_cpp/proj2/server/server/: CMakeLists.txt
nccl/llama.cpp/learn_llama_cpp/proj4/: CMakeLists.txt  README.md  batch.cpp  batch2.cpp  debug_kv.cpp
nccl/llama.cpp/learn_llama_cpp/proj4/debug_kv2/: README.md
nccl/llama.cpp/learn_llama_cpp/proj4/debug_kv2/debug_kv2/: CMakeLists.txt  README.md  debug_kv.cpp
nccl/llama.cpp/learn_llama_cpp/proj4/debug_kv2/debug_kv3/: sample_tree.md
nccl/llama.cpp/learn_llama_cpp/proj4/radix/: README.md  llama-kv-cache.cpp  radix-attention.md  radix.docx
nccl/llama.cpp/pytorch.cpp/pytorch.cpp/: CMakeLists.txt
nccl/llama.cpp/simple-backends/simple-backends/: CMakeLists.txt  README.md  baby-llama.cpp  simple-add.cpp  simple-alloc.cpp  simple-backend.cpp  simple-backend2.cpp  simple-backend3.cpp  simple-backend4.cpp  simple-cpy.cpp  simple-demo.cpp  simple-demo2.cpp  simple-get-rows.cpp
nccl/nccl-dump/detector/: .gitignore  CMakeLists.txt  comm.cpp  comm.hpp  config.hpp  event_handler.cpp  event_handler.hpp  global_status.cpp  global_status.hpp  matmul.cu  matmul.cuh  nccl_structs.hpp  ncclprobe.cpp  prometheus.yml  rebuild_controller.sh  run_test.sh  setup.py  shm_storage.cpp  shm_storage.hpp  shm_topo.cpp  shm_topo.hpp  start_visualizer.sh  test.cu  test_storage.cpp  utils.hpp
nccl/nccl-dump/detector/cmake/: FindCPPREDIS.cmake
nccl/nccl-dump/detector/control_plane/: __init__.py  communicator.py  config.json  cost_estimator.py  dp_planner.py  gen_config_from_src.py  global_analyzer.py  global_controller.py  global_topo.py  local_analyzer.py  local_controller.py  megatron_logger.py  mitigation_plan.py  pp_planner.py  slow_detection.py  task_split.py  visualizer.py
nccl/nccl-dump/detector/injection/: 1node.pkl  8node.pkl  adjust_pp.py  comm_worker.py  comp_worker.py  dp_planner.py  injection.py  pois.py  single_comm.py  slow_comm.py  slow_comp.py
nccl/nccl-dump/detector/utils/: clear_shm.py  get_primitives.py  megatron.txt  runtest.sh
nccl/nccl_allreduce_demo_without_mpi/: .clang-format  .gitignore  CMakeLists.txt  README.md
nccl/nccl_allreduce_demo_without_mpi/my-src/src/: Makefile  gpu_worker.cpp  gpu_worker.h  main.cpp  nccl_dbg.cpp  nccl_dbg.h  nccl_helper.h  tcp_socket.cpp
nccl/nccl_allreduce_demo_without_mpi/my/src/: Makefile  gpu_worker.cpp  gpu_worker.h  thread_manager.h  utils.h
nccl/nccl_allreduce_demo_without_mpi/src/: Makefile  gpu_worker.cpp  gpu_worker.h  main  main.cpp  tcp_socket.h
nccl/plugin/cuda-gemm/cuda-gemm/: .clang-format  CMakeLists.txt  README.md
nccl/plugin/cuda-gemm/cuda-gemm/gemm/: CMakeLists.txt  Makefile  gemm.cu  impl.h
nccl/plugin/cuda-gemm/cuda-gemm/simplegemm/: LICENSE  Makefile  README.md  benchmark.py  benchmark.sh  denoise-h100.sh  gemm.cu  l2.py  layout.py  main.cu  maxreg.cu  op.cpp  pingpong.cu  setup.py  stmatrix.cu  stmatrix.py  test.py
nccl/torch-test/torch-test/: CMakeLists.txt  Makefile  pytorch_test.cpp
nccl/trition/ncnn/imagenet1k/benchmark/: CMakeLists.txt  LoadData.cpp  batch_resnet.cpp  bench_resnet.cpp  bench_resnet_tiny.cpp  bench_resnet_v2.cpp  image_classifier.cpp
nccl/trition/ncnn/my-benchmark/: CMakeLists.txt  README.md  benchncnn.cpp  evaluate.py
nccl/trition/ncnn/my-benchmark/Evaluation/: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  README.MD
nccl/trition/ncnn/ncnn/test/: CMakeLists.txt  resnet.cpp
(+5190 files in other folders)
