
#
# simple-backend

set(CMAKE_VERBOSE_MAKEFILEON ON)
set(GGML_ROOT /pytorch/GGML-Tutorial/ggml)
set(LIB_GGML_DIR /pytorch/GGML-Tutorial/build/ggml/src/)
set(TEST_TARGET simple-backend)
set(TEST_TARGET2 simple-backend2)
set(TEST_TARGET3 simple-backend3)
set(TEST_TARGET4 simple-add)
set(TEST_TARGET5 simple-backend4)
#set(TEST_TARGET6 baby-llama)
set(TEST_TARGET7 simple-demo)
set(TEST_TARGET8 simple-demo2)
set(TEST_TARGET9 simple-get-rows)
set(TEST_TARGET10 simple-demo3)
set(TEST_TARGET11 simple-cpy)
set(TEST_TARGET12 simple-parallel)
# first step
include_directories(${GGML_ROOT}/include) 
# secnod step
link_directories(${LIB_GGML_DIR})
link_directories(/pytorch/GGML-Tutorial/build/ggml/src/ggml-cuda/)
MESSAGE( STATUS "LIB_GGML_DIR = ${LIB_GGML_DIR}")
# 3th step
#add_executable(${TEST_TARGET} simple-sgemm.cpp)
add_executable(${TEST_TARGET} simple-backend.cpp)
add_executable(${TEST_TARGET2} simple-backend2.cpp)
add_executable(${TEST_TARGET3} simple-backend3.cpp)
add_executable(${TEST_TARGET4} simple-add.cpp)
add_executable(${TEST_TARGET5} simple-backend4.cpp)
#add_executable(${TEST_TARGET6} baby-llama.cpp)
add_executable(${TEST_TARGET7} simple-demo.cpp)
add_executable(${TEST_TARGET8} simple-demo2.cpp)
add_executable(${TEST_TARGET9} simple-get-rows.cpp)
add_executable(${TEST_TARGET10} simple-demo3.cpp)
add_executable(${TEST_TARGET11} simple-cpy.cpp)
add_executable(${TEST_TARGET12} simple-parallel.cpp)
# 4th step
target_link_libraries(${TEST_TARGET} ggml ggml-cpu ggml-base ggml-cuda)
target_link_libraries(${TEST_TARGET2} ggml ggml-cpu ggml-base ggml-cuda)
target_link_libraries(${TEST_TARGET3} ggml ggml-cpu ggml-base ggml-cuda)
target_link_libraries(${TEST_TARGET4} ggml ggml-cpu ggml-base ggml-cuda)
target_link_libraries(${TEST_TARGET5} ggml ggml-cpu ggml-base ggml-cuda)
#target_link_libraries(${TEST_TARGET6} ggml ggml-cpu ggml-base ggml-cuda)
target_link_libraries(${TEST_TARGET7} ggml ggml-cpu ggml-base ggml-cuda)
target_link_libraries(${TEST_TARGET8} ggml ggml-cpu ggml-base ggml-cuda)
target_link_libraries(${TEST_TARGET9} ggml ggml-cpu ggml-base ggml-cuda)
target_link_libraries(${TEST_TARGET10} ggml ggml-cpu ggml-base ggml-cuda)
target_link_libraries(${TEST_TARGET11} ggml ggml-cpu ggml-base ggml-cuda)
target_link_libraries(${TEST_TARGET12} ggml ggml-cpu ggml-base ggml-cuda)

if (GGML_CUDA)
    add_compile_definitions(GGML_USE_CUDA)
endif()

if (GGML_METAL)
    add_compile_definitions(GGML_USE_METAL)
endif()
